# crocoddyl-multithreading-benchmark

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json  entrypoint.sh  install_dependency.sh
experiments/: CMakeLists.txt
experiments/ddp_separated_memory/: CMakeLists.txt
experiments/ddp_separated_memory/include/: ddp.hpp
experiments/ddp_separated_memory/src/: ddp.cpp  multithreading.cpp
experiments/flattened_ddp/: CMakeLists.txt
experiments/flattened_ddp/include/: ddp.hpp
experiments/flattened_ddp/src/: ddp.cpp  flattened_ddp_test.cpp
experiments/pure_eigen_openmp/: CMakeLists.txt  README.md
experiments/pure_eigen_openmp/notebooks/: pure_eigen_openmp.ipynb
experiments/pure_eigen_openmp/src/: pure_eigen_openmp.cpp  pure_eigen_openmp_pointers.cpp  pure_openmp.cpp
experiments/tracing/: CMakeLists.txt
experiments/tracing/include/: tracepoint-provider.h
scripts/: build.sh  test.ipynb
src/: ddp.cpp  parallel_bench.cpp
